Getting characteristic names e.g. Heart Rate from not connected devices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ set(MAIN_SRC
     src/video-settings.hpp
     src/bluetooth-controller.cpp
     src/bluetooth-controller.hpp
+    src/bluetooth-utils.cpp
+    src/bluetooth-utils.hpp
     src/scene.cpp
     src/scene.hpp
     src/main-menu.cpp
