Fixed compiler warning as error in VS2022 update
Added definition to silence the warning as error for:

include\xutility(1266): warning C4996: 'stdext::checked_array_iterator<T *>': warning STL4043: stdext::checked_array_iterator, stdext::unchecked_array_iterator, and related factory functions are non-Standard extensions and will be removed in the future. std::span (since C++20) and gsl::span can be used instead. You can define _SILENCE_STDEXT_ARR_ITERS_DEPRECATION_WARNING or _SILENCE_ALL_MS_EXT_DEPRECATION_WARNINGS to suppress this warning.
          with
          [
              T=fmt::v9::detail::bigint::bigit
          ]

And similar.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_C_STANDARD 11) # Requires C11 standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(CMAKE_CXX_FLAGS  "-D_SILENCE_STDEXT_ARR_ITERS_DEPRECATION_WARNING")
+
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/SimpleBLE/simpleble ${CMAKE_BINARY_DIR}/simpleble)
 
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/raylib ${CMAKE_BINARY_DIR}/raylib)
